@@ -12,7 +12,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: compress.c,v 1.19 2002/03/18 17:31:54 provos Exp $");
+RCSID("$OpenBSD: compress.c,v 1.20 2004/01/13 19:23:15 markus Exp $");
 
 #include "log.h"
 #include "buffer.h"
@@ -56,11 +56,11 @@ buffer_compress_init_recv(void)
 void
 buffer_compress_uninit(void)
 {
-	debug("compress outgoing: raw data %lu, compressed %lu, factor %.2f",
+	debug("compress outgoing: raw data %llu, compressed %llu, factor %.2f",
 	    outgoing_stream.total_in, outgoing_stream.total_out,
 	    outgoing_stream.total_in == 0 ? 0.0 :
 	    (double) outgoing_stream.total_out / outgoing_stream.total_in);
-	debug("compress incoming: raw data %lu, compressed %lu, factor %.2f",
+	debug("compress incoming: raw data %llu, compressed %llu, factor %.2f",
 	    incoming_stream.total_out, incoming_stream.total_in,
 	    incoming_stream.total_out == 0 ? 0.0 :
 	    (double) incoming_stream.total_in / incoming_stream.total_out);
