@@ -9,6 +9,9 @@
      remove unnecessary Ic's;
      kill whitespace at EOL;
      ok djm@
+   - markus@cvs.openbsd.org 2004/01/13 19:23:15
+     [compress.c session.c]
+     -Wall; ok henning
 
 20040114
  - (dtucker) [auth-pam.c] Have monitor die if PAM authentication thread exits
@@ -1678,4 +1681,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3171 2004/01/21 00:00:04 djm Exp $
+$Id: ChangeLog,v 1.3172 2004/01/21 00:00:46 djm Exp $
